src/test/ui/rfc-2632-const-trait-impl/super-traits-fail-2.stderr
error[E0277]: the trait bound `T: ~const Foo` is not satisfied
  --> $DIR/super-traits-fail-2.rs:9:7
   |
LL |     x.a();
   |       ^^^ the trait `~const Foo` is not implemented for `T`
   |
note: the trait `Foo` is implemented for `T`, but that implementation is not `const`
  --> $DIR/super-traits-fail-2.rs:9:7
   |
LL |     x.a();
   |       ^^^

error[E0015]: cannot call non-const fn `<T as Foo>::a` in constant functions
  --> $DIR/super-traits-fail-2.rs:9:7
   |
LL |     x.a();
   |       ^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0015, E0277.
For more information about an error, try `rustc --explain E0015`.
